# learn-opengl-rs

./: Cargo.toml  README.md
.nlsp-settings/: rust_analyzer.json
glfw_install/lib/cmake/glfw3/: glfw3Targets.cmake
glfw_install/lib/pkgconfig/: glfw3.pc
src/: camera.rs  light.rs  macros.rs  main.rs  material.rs  shader.rs
src/_1_getting_started/: _2_2_hello_triangle_indexed.rs  _2_3_ex1.rs  _3_1_uniform.rs  _3_2_interpolation.rs  _3_3_shader_class.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_6_textures_ex4.rs  _5_1_transforms.rs  _5_2_transforms_ex2.rs  _6_1_coords.rs  _6_2_coords_depth.rs  _6_3_coords_multiple.rs  _7_1_camera_circle.rs  _7_2_camera_input.rs  _7_3_camera_mouse_zoom.rs  _7_4_camera_class.rs  main.rs  mod.rs
src/_1_getting_started/shaders/: 3.3.shader.fs  3.3.shader.vs  4.1.texture.fs  4.2.texture_combined.fs  4.6.texture_ex4.fs  4.6.texture_ex4.vs  5.1.transforms.vs  6.1.coords.fs  6.1.coords.vs  6.2.coords_depth.fs  6.2.coords_depth.vs
src/_2_lighting/: _1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_specular.rs  _2_4_basic_lighting_ex2.rs  _3_1_materials.rs  _4_1_lighting_maps_diffuse.rs  mod.rs
src/_2_lighting/shader/: 1.colors.frag  1.colors.vert
src/_2_lighting/shaders/: 1.colors.frag  1.colors.vert  2.1.basic_lighting.frag  2.1.basic_lighting.vert  2.1.lamp.frag  2.1.lamp.vert  2.2.basic_lighting.frag  2.2.basic_lighting.vert  2.4.basic_lighting.frag  2.4.basic_lighting.vert  3.1.materials.frag  3.1.materials.vert  4.1.lighting_maps_diffuse.frag  4.1.lighting_maps_diffuse.vert
